# AdventOfCode2021C

./: .gitignore  .gitmodules  .ninja_log  CMakeLists.txt  README.md  a.out  bitfield.s  build.ninja  compile.py  run  run.py
input/day19/: ex1
src/: day1.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  day2.c  day20.c  day21.c  day22.c  day23.c  day24.c  day25.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  days.h  main.c
